# software-rasterizer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  rasterizer.cpp  rasterizer.hpp
